--- a/deepseek-code-review-sdk/pom.xml
+++ b/deepseek-code-review-sdk/pom.xml
@@ -13,9 +13,10 @@
     <version>1.0</version>
     <groupId>com.cky</groupId>
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <retrofit2.version>2.9.0</retrofit2.version>
         <slf4j.version>2.0.6</slf4j.version>
     </properties>
