--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,7 @@ jobs:
         run: mvn clean install
 
       - name: Copy deepseek-code-review-sdk JAR
-        run: mvn dependency:copy -com.cky:deepseek-code-review-sdk:1.0 -DoutputDirectory=./libs
-
+        run: mvn dependency:copy -Dartifact=com.cky:deepseek-code-review-sdk:1.0 -DoutputDirectory=./libs
       - name: Get repository name
         id: repo-name
         run: echo "REPO_NAME=${GITHUB_REPOSITORY##*/}" >> $GITHUB_ENV
