--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,18 @@
     <artifactId>deepseek-code-review</artifactId>
     <version>1.0</version>
     <packaging>pom</packaging>
-    <modules>
-        <module>deepseek-code-review-sdk</module>
-    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.12</version>
+        <relativePath/>
+    </parent>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
