--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,9 @@
     <artifactId>deepseek-code-review</artifactId>
     <version>1.0</version>
     <packaging>pom</packaging>
-
+    <modules>
+        <module>deepseek-code-review-sdk</module>
+    </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
